--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,6 +14,8 @@
 <%= link_to "Leave Site", :controller => "welcome", :action => "thank_you" %> |
 <%= link_to "Register", :controller => "welcome", :action => "register" %> |
 <%= link_to "Home", :controller => "welcome", :action => "home" %> |
+<%= link_to "Your Cart", :controller => "carts", :action => "your_cart" %> |
+
 
 
 <div id='header'>
