--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,6 +5,8 @@
       <%= submit_tag "Search", :name => nil %>
     </p>
 <% end %>
+
+
 <table>
   <tr>
     <th>Name</th>
@@ -25,6 +27,7 @@
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
     <td><%= link_to 'Destroy', product, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= button_to 'Add to Cart', line_items_path(:product_id => product) %></td>
   </tr>
 <% end %>
 </table>
