--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,8 +2,10 @@
 
 <h2>Your Cart</h2>
 <ul>
- <% for item in @cart.line.items %>
+ <% for item in @cart.line_items.items %>
     <li><%= item.quantity %> &times; <%= item.product.name %></li>
-      <% end %>
+      <br><% end %><br/>
+  <br>Total Price: <%= number_to_currency( @cart.total_price, :unit => '&euro;') %><br/>
+  <%= button_to 'Empty cart', @cart, :method => :delete, :confirm => 'Are you sure?' %>
 </ul>
 
