--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,14 @@
+<br/><br/>
 <h1>Welcome to SmirkShirt :)</h1>
-<p>text to be added later</p>
+<br/><br/>
+<h3>A T-shirt can do many things,
+  it can make a statement, <br/>
+  advertise your brand,
+  make you stand out or it can simply <br/>
+  just make you feel good.
+</h3>
+<br/><br/>
+<h3>
+  A <u>Smirk;)Shirt</u> can do all of the above and more!<br/>
+  With our unique designs you can create your own identity!</h3>
+
