--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -9,6 +9,7 @@
   Total Price: <%= number_to_currency( @cart.total_price, :unit => '&euro;') %><br/>
   <%= button_to "Checkout", new_order_url, :method =>:get %>
   <%= button_to 'Empty cart', @cart, :method => :delete, :confirm => 'Are you sure?' %>
+  <%= link_to 'Continue Shopping', products_path %>
 </ul>
 
 
