--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,6 +9,7 @@
 
 <table>
   <tr>
+    <th>Image</th>
     <th>Name</th>
     <th>Description</th>
     <th>Price</th>
@@ -20,13 +21,16 @@
 
 <% @products.each do |product| %>
   <tr>
+    <td><%= image_tag(product.image_url)unless product.image_url.nil?  %></td>
     <td><%= product.name %></td>
     <td><%= product.description %></td>
     <td><%= product.price %></td>
     <td><%= product.user_id %></td>
     <td><%= link_to 'Show', product %></td>
+    <% if current_user and current_user.admin %>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
     <td><%= link_to 'Destroy', product, :confirm => 'Are you sure?', :method => :delete %></td>
+    <% end %>
     <td><%= button_to 'Add to Cart', line_items_path(:product_id => product) %></td>
   </tr>
 <% end %>
@@ -34,4 +38,6 @@
 
 <br />
 
+<% if current_user and current_user.admin? %>
 <%= link_to 'New Product', new_product_path %>
+<% end %>
