--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Image:</b>
+  <%image_tag(@product.image_url) %>
+</p>
+<p>
   <b>Name:</b>
   <%= @product.name %>
 </p>
@@ -15,6 +19,7 @@
   <%= @product.price %>
 </p>
 
-
+<% if current_user and current_user.admin %>
 <%= link_to 'Edit', edit_product_path(@product) %> |
+<% end %>
 <%= link_to 'Back', products_path %>
