--- a/app/views/welcome/register.html.erb
+++ b/app/views/welcome/register.html.erb
@@ -1,8 +1,16 @@
 <h1>Register</h1>
-<div class="field">
-  <%= label_tag :email %><br />
-  <%= text_field_tag :email %>
-  <br />
-  <%= label_tag :password %><br />
-  <%= password_field_tag :password %>
-</div>
+<% form_for(@user) do |f| %>
+
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.text_field :email %>
+    </div>
+    <div class="field">
+      <%= f.label :password %><br />
+      <%= f.password_field :password %>
+    </div>
+    <div class="actions">
+      <%= f.submit "Register" %>
+    </div>
+<% end %>
+<%= link_to 'Back', products_path %>
